# imx6ull_arm

./: .gitignore  CMakeLists.txt  README.md
bsp/: CMakeLists.txt
bsp/clk/: CMakeLists.txt
bsp/delay/: CMakeLists.txt
i2c/: CMakeLists.txt  Makefile  imx6ul.lds  main.c  start.S
